<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp">

    <!-- Imagen de cabecera -->
    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="393dp"
        android:layout_height="462dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/fondodados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Texto: "Tiradas especiales" -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title_special_rolls"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerImage" />

    <!-- Botón para acceder a la tirada con ventaja -->
    <Button
        android:id="@+id/advantageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ECDEB2"
        android:text="@string/advantage_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <!-- Botón para acceder a la tirada con desventaja -->
    <Button
        android:id="@+id/disadvantageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ECDEB2"
        android:text="@string/disadvantage_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/advantageButton" />

    <!-- Botón para acceder a la suma de tiradas -->
    <Button
        android:id="@+id/additionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ECDEB2"
        android:text="@string/addition_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/disadvantageButton" />

    <!-- Botón para acceder a la tirada customizada -->
    <Button
        android:id="@+id/customicedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ECDEB2"
        android:text="@string/customized_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/additionButton" />

</androidx.constraintlayout.widget.ConstraintLayout>