<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#493D22">

    <!-- Spinner para seleccionar el número de dados -->
    <Spinner
        android:id="@+id/numDiceSpinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#ECDEB2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Spinner para seleccionar el dado -->
    <Spinner
        android:id="@+id/diceSpinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#ECDEB2"
        app:layout_constraintTop_toBottomOf="@id/numDiceSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Imagen del dado seleccionado -->
    <ImageView
        android:id="@+id/diceImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/dice_image_description"
        app:layout_constraintTop_toBottomOf="@id/diceSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para lanzar los dados -->
    <Button
        android:id="@+id/rollButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#ECDEB2"
        android:textColor="#000000"
        android:text="@string/roll_button_text"
        android:textSize="20sp"
        android:fontFamily="@font/agbalumo"
        app:layout_constraintTop_toBottomOf="@id/diceImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Texto para mostrar el resultado -->
    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/result_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/agbalumo"
        android:textColor="#ECDEB2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/rollButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
